crates/spoke-connect/bindings/swift/generated/spoke_connectFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
uint64_t uniffi_spoke_connect_fn_constructor_inboundsequence_new(RustCallStatus *_Nonnull out_status
    
);
uint64_t uniffi_spoke_connect_fn_method_inboundsequence_advance(uint64_t ptr, int64_t sequence, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_spoke_connect_fn_method_noncestore_check_and_record(uint64_t ptr, RustBuffer peer_id, RustBuffer nonce, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_method_connectresponderffi_close(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_connectresponderffi_invoke_tool(uint64_t ptr, RustBuffer capability_id, RustBuffer arguments_json, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_method_connectresponderffi_register_tool_handler(uint64_t ptr, RustBuffer capability_id, uint64_t handler, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_connectresponderffi_remote_manifest(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_connectresponderffi_remote_peer_id(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_connectresponderffi_session_id(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_connectresponderffi_state(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_method_loopbacktransport_close(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_loopbacktransport_recv(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_method_loopbacktransport_send(uint64_t ptr, RustBuffer envelope, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_method_loopbacktransportpair_client(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_method_loopbacktransportpair_server(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_get_host_capability_manifest(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_get_knowledge_entry(uint64_t ptr, RustBuffer entry_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_get_relation(uint64_t ptr, RustBuffer relation_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_invoke_tool(uint64_t ptr, RustBuffer capability_id, RustBuffer arguments_json, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_list_knowledge_entries(uint64_t ptr, RustBuffer scope_json, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_list_peer_host_capability_manifests(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_list_peers(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_list_rules(uint64_t ptr, RustBuffer rule_refs, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_list_timeline_events(uint64_t ptr, RustBuffer scope_json, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_put_findings(uint64_t ptr, RustBuffer findings_json, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_put_knowledge_entry(uint64_t ptr, RustBuffer entry_json, RustBuffer expected_base_revision, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_put_relation(uint64_t ptr, RustBuffer relation_json, RustBuffer expected_base_revision, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_register_peer(uint64_t ptr, uint64_t adapter, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_method_multipeerrouterffi_unregister_peer(uint64_t ptr, RustBuffer peer_id, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_func_check_response_correlation(RustBuffer expected_session_id, uint64_t expected_sequence, RustBuffer expected_request_id, RustBuffer actual_session_id, uint64_t actual_sequence, RustBuffer actual_request_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_func_derive_peer_id_from_ed25519_pubkey(RustBuffer pubkey, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_spoke_connect_fn_func_dispatch_allowed(RustBuffer op, RustBuffer negotiated_capabilities, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_spoke_connect_fn_func_is_allowlisted(RustBuffer allowlist, RustBuffer peer_id, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_func_protocol_version(RustCallStatus *_Nonnull out_status
    
);
RustBuffer uniffi_spoke_connect_fn_func_required_capability(RustBuffer op, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_func_sign_hello_ed25519(RustBuffer secret, RustBuffer nonce, RustBuffer host_json, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_func_verify_hello_ed25519(RustBuffer public_key, RustBuffer expected_peer_id, RustBuffer hello_json, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_func_connect_responder_ffi(uint64_t transport, RustBuffer seed, RustBuffer manifest_json, RustBuffer allowlist, RustBuffer peer_keys, RustBuffer ports, RustBuffer invoke_timeout_ms, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_func_loopback_transport_pair(RustCallStatus *_Nonnull out_status
    
);
uint64_t uniffi_spoke_connect_fn_func_new_multi_peer_router_ffi(RustCallStatus *_Nonnull out_status
    
);
uint64_t uniffi_spoke_connect_fn_func_connect_remote_adapter_ffi(uint64_t transport, RustBuffer local_seed, RustBuffer local_manifest_json, RustBuffer remote_pubkey, RustBuffer allowlist, RustBuffer invoke_timeout_ms, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_put_relation(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_register_tool_handler(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_remote_manifest(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_remote_peer_id(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_session_id(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_state(void
    
);