crates/spoke-connect/bindings/python/spoke_connect/__init__.py

_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_put_relation.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_register_tool_handler.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_register_tool_handler.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_remote_manifest.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_remote_manifest.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_remote_peer_id.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_remote_peer_id.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_session_id.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_session_id.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_state.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_state.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_fn_func_check_response_correlation.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_uint64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_func_check_response_correlation.restype = None
_UniffiLib.uniffi_spoke_connect_fn_func_connect_remote_adapter_ffi.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_func_connect_remote_adapter_ffi.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_func_connect_responder_ffi.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_func_connect_responder_ffi.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_func_derive_peer_id_from_ed25519_pubkey.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_func_derive_peer_id_from_ed25519_pubkey.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_func_dispatch_allowed.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_func_dispatch_allowed.restype = ctypes.c_int8
_UniffiLib.uniffi_spoke_connect_fn_func_is_allowlisted.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_func_is_allowlisted.restype = ctypes.c_int8
_UniffiLib.uniffi_spoke_connect_fn_func_loopback_transport_pair.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_func_loopback_transport_pair.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_func_new_multi_peer_router_ffi.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_func_new_multi_peer_router_ffi.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_func_protocol_version.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_func_protocol_version.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_func_required_capability.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_func_required_capability.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_func_sign_hello_ed25519.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_func_sign_hello_ed25519.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_func_verify_hello_ed25519.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_func_verify_hello_ed25519.restype = None
_UniffiLib.uniffi_spoke_connect_fn_method_connectresponderffi_close.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_connectresponderffi_close.restype = None
_UniffiLib.uniffi_spoke_connect_fn_method_connectresponderffi_invoke_tool.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_connectresponderffi_invoke_tool.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_connectresponderffi_register_tool_handler.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_connectresponderffi_register_tool_handler.restype = None
_UniffiLib.uniffi_spoke_connect_fn_method_connectresponderffi_remote_manifest.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_connectresponderffi_remote_manifest.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_connectresponderffi_remote_peer_id.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_connectresponderffi_remote_peer_id.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_connectresponderffi_session_id.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_connectresponderffi_session_id.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_connectresponderffi_state.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_connectresponderffi_state.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_inboundsequence_advance.argtypes = (
    ctypes.c_uint64,
    ctypes.c_int64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_inboundsequence_advance.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_constructor_inboundsequence_new.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_constructor_inboundsequence_new.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_method_loopbacktransport_close.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_loopbacktransport_close.restype = None
_UniffiLib.uniffi_spoke_connect_fn_method_loopbacktransport_recv.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_loopbacktransport_recv.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_loopbacktransport_send.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_loopbacktransport_send.restype = None
_UniffiLib.uniffi_spoke_connect_fn_method_loopbacktransportpair_client.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_loopbacktransportpair_client.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_method_loopbacktransportpair_server.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_loopbacktransportpair_server.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_get_host_capability_manifest.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_get_host_capability_manifest.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_get_knowledge_entry.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_get_knowledge_entry.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_get_relation.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_get_relation.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_invoke_tool.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_invoke_tool.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_list_knowledge_entries.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_list_knowledge_entries.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_list_peer_host_capability_manifests.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_list_peer_host_capability_manifests.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_list_peers.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_list_peers.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_list_rules.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_list_rules.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_list_timeline_events.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_list_timeline_events.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_put_findings.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_put_findings.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_put_knowledge_entry.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_put_knowledge_entry.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_put_relation.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_put_relation.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_register_peer.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_register_peer.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_unregister_peer.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_multipeerrouterffi_unregister_peer.restype = None
_UniffiLib.uniffi_spoke_connect_fn_method_noncestore_check_and_record.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
